apply plugin: 'application'
apply plugin: 'eclipse'

sourceCompatibility = "1.10"
targetCompatibility = "1.10"

repositories {
    jcenter()
}

dependencies {
	compile 'org.industrial-devops:titan.ccp.model:0.0.1-SNAPSHOT'
    compile 'com.google.code.gson:gson:2.8.2'
    compile 'org.slf4j:slf4j-simple:1.6.1'

    // Use JUnit test framework
    testCompile 'junit:junit:4.12'
}

tasks.withType(AbstractCompile) {
  options.compilerArgs += ["--add-modules", "jdk.incubator.httpclient"]
}

tasks.withType(Test) {
  jvmArgs += ["--add-modules", "jdk.incubator.httpclient"]
}

mainClassName = "titan.ccp.kiekerbridge.raritan.simulator.SimulationRunner"

applicationDefaultJvmArgs = ["--add-modules=jdk.incubator.httpclient"]

eclipse {
    classpath {
       downloadSources=true
       downloadJavadoc=true
    }
}